@@ -3764,3 +3764,60 @@ AT_CHECK_UNQUOTED([grep "cookie=$hv3_cookie," phy_to_log_flows], [0], [dnl
 
 OVN_CLEANUP([hv1])
 AT_CLEANUP
+
+AT_SETUP([ovn-cntroller exit - Cleanup])
+ovn_start
+
+net_add n1
+sim_add hv1
+as hv1
+check ovs-vsctl add-br br-phys
+ovn_attach n1 br-phys 192.168.0.11 24 geneve,vxlan
+check ovn-nbctl --wait=hv sync
+
+start_controller() {
+    rm hv1/ovn-controller.log
+    start_daemon ovn-controller
+    check ovn-nbctl --wait=hv sync
+}
+
+# Stop ovn-controller, without any argument it will cleanup resources.
+check ovn-appctl -t ovn-controller exit
+check grep -q "Exiting ovn-controller, resource cleanup: True" hv1/ovn-controller.log
+
+# Stop ovn-controller without cleanup.
+start_controller
+check ovn-appctl -t ovn-controller exit --restart
+check grep -q "Exiting ovn-controller, resource cleanup: False (--restart)" hv1/ovn-controller.log
+
+# Set cleanup on exit.
+check ovs-vsctl set open . external-ids:ovn-cleanup-on_exit=true
+
+# Stop ovn-controller, without any argument it will cleanup resources.
+start_controller
+check ovn-appctl -t ovn-controller exit
+check grep -q "Exiting ovn-controller, resource cleanup: True" hv1/ovn-controller.log
+
+# Stop ovn-controller, --restart flag has priority over external-ids, no cleanup.
+start_controller
+check ovn-appctl -t ovn-controller exit --restart
+check grep -q "Exiting ovn-controller, resource cleanup: False (--restart)" hv1/ovn-controller.log
+
+# Set cleanup on exit to false.
+check ovs-vsctl set open . external-ids:ovn-cleanup-on-exit=false
+
+# Stop ovn-controller, without any argument it won't cleanup due to the external-ids.
+start_controller
+check ovn-appctl -t ovn-controller exit
+check grep -q "Exiting ovn-controller, resource cleanup: False (--restart)" hv1/ovn-controller.log
+
+# Stop ovn-controller without cleanup.
+start_controller
+check ovn-appctl -t ovn-controller exit --restart
+check grep -q "Exiting ovn-controller, resource cleanup: False (--restart)" hv1/ovn-controller.log
+
+# Start the controller so the test cleanup routing doesn't get stuck.
+start_controller
+
+OVN_CLEANUP([hv1])
+AT_CLEANUP
