@@ -1,5 +1,9 @@
 Post v25.03.0
 -------------
+   - Added support for "ovn-cleanup-on-exit" config option in Open_vSwitch
+     external-ids, this option allows to specify if ovn-controller should
+     perform cleanup when exiting. The "--restart" exit has always priority
+     to keep the backward compatibility.
 
 OVN v25.03.0 - 07 Mar 2025
 --------------------------
